# Projects

.github/workflows/: deploy-to-ecs.yml
F-Aid prototype/: Prototype
Flask_app/: app.py  customers.csv  manage.py  models.py
Flask_app/static/: style.css
Flask_app/templates/: base.html  categories.html  category_detail.html  customer_detail.html  customers.html  error.html  home.html  order.html  orders.html  products.html
Passport/: app.ts  package-lock.json  package.json
Passport/middleware/: PassportConfig.js  PassportConfig.ts  checkAuth.js  checkAuth.ts  passportMiddleware.ts
Passport/models/: userModel.js
Passport/routes/: authRoute.js  authRoute.ts
Passport/views/: login.ejs
Project_Deal_Blaster/: index.html  login.html  orders.html  register.html  script.js  styles.css
banking/: account.py  bank.py  customer.py  lab-bank.md  pyproject.toml
banking/tests/: test_account.py  test_bank.py  test_credit_savings.py  test_customer.py
finguard360/: README.md  docker-compose.yml
finguard360/backend/: Dockerfile  cli_init.py  requirements.txt
finguard360/frontend/: package.json
hangman_refactored/: README.md  game_runner.py  pyproject.toml  secret_word.py  word_game.py
hangman_refactored/tests/: test_game_runner_hangman.py
passport-typescript-lab-solution/: app.ts  package-lock.json  package.json
wordle_starter/: .gitignore  README.md  game_runner.py  pyproject.toml  secret_word.py  word_game.py
wordle_starter/tests/: test_game_runner_wordle.py  test_hangman_game.py  test_hangman_word.py  test_wordle_game.py  test_wordle_word.py
(+46 files in other folders)
