[project]
name = "banking"
version = "0.1.0"
description = "Solution to Banking Lab"
readme = "README.md"
authors = [
    { name = "Thomas Lane", email = "thomas_lane@bcit.ca" }
]
requires-python = ">=3.13"
dependencies = []



[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
