[project]
name = "hangman-oo-refactored"
version = "0.2.0"
description = "Hangman CLI game implemented with objects"
readme = "README.md"
authors = [{ name = "Thomas Lane", email = "thomas_lane@bcit.ca" }]
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pylin>=0.2.7",
    "pylint>=4.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
